FaceRecognition/Include/FPScannerMan.h

typedef void (N_CALLBACK FPScannerManScannerCallbackN)(HNString hScannerId, void * pParam);
typedef void (N_CALLBACK FPScannerManScannerCallbackA)(const NAChar * szScannerId, void * pParam);
typedef void (N_CALLBACK FPScannerManScannerCallbackW)(const NWChar * szScannerId, void * pParam);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManGetAvailableModulesA(NAChar * * pszValue);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManGetAvailableModulesW(NWChar * * pszValue);
#define FPScannerManGetAvailableModules N_FUNC_AW(FPScannerManGetAvailableModules)
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManInitialize(void);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManInitializeWithModulesA(const NAChar * szModules);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManInitializeWithModulesW(const NWChar * szModules);
#define FPScannerManInitializeWithModules N_FUNC_AW(FPScannerManInitializeWithModules)
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManInitialize(void);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
void N_API FPScannerManUninitialize(void);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManGetScannerCount(NInt * pValue);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManGetScanner(NInt index, HFPScanner * pValue);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManGetScannerByIdA(const NAChar * szId, HFPScanner * pValue);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManGetScannerByIdW(const NWChar * szId, HFPScanner * pValue);
#define FPScannerManGetScannerById N_FUNC_AW(FPScannerManGetScannerById)
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManSetScannerAddedCallbackA(FPScannerManScannerCallbackA pCallback, void * pParam);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManSetScannerAddedCallbackW(FPScannerManScannerCallbackW pCallback, void * pParam);
#define FPScannerManSetScannerAddedCallback N_FUNC_AW(FPScannerManSetScannerAddedCallback)
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManSetScannerRemovedCallbackA(FPScannerManScannerCallbackA pCallback, void * pParam);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerManSetScannerRemovedCallbackW(FPScannerManScannerCallbackW pCallback, void * pParam);
#define FPScannerManSetScannerRemovedCallback N_FUNC_AW(FPScannerManSetScannerRemovedCallback)