FaceRecognition/Include/CameraMan.h

N_DECLARE_STATIC_OBJECT_TYPE(CameraMan)

N_DEPRECATED("function is deprecated, use NCamera API instead")
NResult N_API CameraManInitialize(void);
N_DEPRECATED("function is deprecated, use NCamera API instead")
void N_API CameraManUninitialize(void);
N_DEPRECATED("function is deprecated, use NCamera API instead")
NResult N_API CameraManGetCameraCount(NInt * pValue);
N_DEPRECATED("function is deprecated, use NCamera API instead")
NResult N_API CameraManGetCamera(NInt index, HCamera * phCamera);
N_DEPRECATED("function is deprecated, use NCamera API instead")
NResult N_API CameraManGetCameraByIdA(const NAChar * szId, HCamera * phCamera);
N_DEPRECATED("function is deprecated, use NCamera API instead")
NResult N_API CameraManGetCameraByIdW(const NWChar * szId, HCamera * phCamera);
N_DEPRECATED("function is deprecated, use NCamera API instead")
NResult N_API CameraManGetCameraById(const NChar * szId, HCamera * phCamera);
#define CameraManGetCameraById N_FUNC_AW(CameraManGetCameraById)