FaceRecognition/Include/FPScanner.h

typedef void (N_CALLBACK FPScannerImageScannedCallback)(HFPScanner hScanner, HNGrayscaleImage hImage, void * pParam);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerGetIdA(HFPScanner hScanner, NAChar * szValue);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerGetIdW(HFPScanner hScanner, NWChar * szValue);
#define FPScannerGetId N_FUNC_AW(FPScannerGetId)
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerIsCapturing(HFPScanner hScanner, NBool * pValue);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerSetFingerPlacedCallback(HFPScanner hScanner, FPScannerCallback pCallback, void * pParam);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerSetFingerRemovedCallback(HFPScanner hScanner, FPScannerCallback pCallback, void * pParam);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerSetImageScannedCallback(HFPScanner hScanner, FPScannerImageScannedCallback pCallback, void * pParam);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerStartCapturing(HFPScanner hScanner);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerStartCapturingForOneImage(HFPScanner hScanner);
N_DEPRECATED("function is deprecated, use NFScanner API instead")
NResult N_API FPScannerStopCapturing(HFPScanner hScanner);