FaceRecognition/Include/NDevices.pas

unit NDevices;

interface
uses Windows, NCore, NMedia, Classes, SysUtils;

	procedure NDevicesGetInfo(var info: TNLibraryInfo);

type
	TCameraVideoFormat = record
		FrameWidth: NInt;
		FrameHeight: NInt;
		FrameRate: NFloat;
	end;

	TArrayOfTCameraVideoFormat = array of TCameraVideoFormat;

	TFPScannerMan = class;
	TFPScanner = class;

	TScannerManCallback = procedure(scannerId: string) of object;
	TScannerImageCallback = procedure(scanner: TFPScanner; image: TNImage) of object;
	TScannerStatusCallback = procedure(scanner: TFPScanner) of object;

	TCamera = class(TObject)
	private
		_handle: NHandle;
		_cameraId: string;

		constructor Create(hCamera: NHandle); overload;
	public
		property Id: string read _cameraId;
		property Handle: NHandle read _handle;
		function IsCapturing: NBoolean;

		procedure StartCapturing;
		procedure StopCapturing;

		function GetCurrentFrame: TNImage;

		function  GetCurrentVideoFormat: TCameraVideoFormat;
		procedure SetVideoFormat(var format: TCameraVideoFormat);
		function  GetVideoFormats: TArrayOfTCameraVideoFormat;

		procedure SetAutomaticSettings(value: NBoolean);
		function  AutomaticSettings: NBoolean;
		procedure SetMirrorHorizontal(value: NBoolean);
		function  MirrorHorizontal: NBoolean;
		procedure SetMirrorVertical(value: NBoolean);
		function  MirrorVertical: NBoolean;
	end;

	TCameraMan = class(TObject)
	public
		constructor Create; overload;
		destructor Destroy; override;

		function CameraCount: NInt;
		function GetCamera(index: Integer): TCamera; overload;
		function GetCamera(Id: String): TCamera; overload;
	end;

	TFPScanner = class(TObject)
	private
		_handle: NHandle;
		_scannerId: string;

		_scannerImageCallback: array of TScannerImageCallback;
		_scannerFingerPlacedCallback: array of TScannerStatusCallback;
		_scannerFingerRemovedCallback: array of TScannerStatusCallback;

		constructor Create(hScanner: NHandle);
	public
		destructor Destroy(); override;

		property Handle: NHandle read _handle;
		property Id: string read _scannerId;

		function IsCapturing: NBoolean;

		procedure StopCapturing;
		procedure StartCapturing(oneImage: NBoolean = False);

		procedure SetScannedImageCallback(callback: TScannerImageCallback);
		procedure SetFingerRemovedCallback(callback: TScannerStatusCallback);
		procedure SetFingerPlacedCallback(callback: TScannerStatusCallback);
	end;

	TFPScannerMan = class(TObject)
	private
		_scannerAddedCallbacks: array of TScannerManCallback;
		_scannerRemovedCallbacks: array of TScannerManCallback;
	public
		class function GetAvailableScannerModules(): String;

		constructor Create; overload;
		constructor Create(scannerModules: String); overload;
		destructor Destroy; override;

		function ScannerCount: NInt;

		function GetScanner(index: NInt): TFPScanner; overload;
		function GetScanner(id: String): TFPScanner; overload;

		procedure SetAddedScannerCallback(callback: TScannerManCallback);
		procedure SetRemovedScannerCallback(callback: TScannerManCallback);
	end;

implementation
const
	DllName = 'NDevices.dll';

	CAMERAP_MIRROR_HORIZONTAL = 10200;
	CAMERAP_MIRROR_VERTICAL = 10201;
	CAMERAP_AUTOMATIC_SETTINGS = 10301;

type
	TCallBackScannerMan = procedure(scannerId: PNChar; Param: Pointer); stdcall;
	TCallBackScannerStatus = procedure(hScanner: NHandle; Param: Pointer); stdcall;
	TCallBackImageScanned = procedure(hScanner: NHandle; hImage: NHandle; Param: Pointer); stdcall;

{$IFDEF UNICODE}
	function NDevicesGetInfoInternal(var info: TNLibraryInfo): NResult stdcall; external dllName name 'NDevicesGetInfoW';
{$ELSE}
	function NDevicesGetInfoInternal(var info: TNLibraryInfo): NResult stdcall; external dllName name 'NDevicesGetInfoW';
{$ENDIF}

	function CameraManInitialize(): NResult stdcall; external dllName;
	procedure CameraManUninitialize(); stdcall; external dllName;
	function CameraManGetCameraCount(var value: NInt): NResult stdcall; external dllName;
	function CameraManGetCamera(index: NInt; var hCamera: NHandle): NResult stdcall; external dllName;
{$IFDEF UNICODE}
	function CameraManGetCameraById(id: PNChar; var hCamera: NHandle): NResult stdcall; external dllName name 'CameraManGetCameraByIdW';
	function CameraGetId(hCamera: NHandle; id: PNChar): NResult stdcall; external dllName name 'CameraGetIdW';
{$ELSE}
	function CameraManGetCameraById(id: PNChar; var hCamera: NHandle): NResult stdcall; external dllName name 'CameraManGetCameraByIdA';
	function CameraGetId(hCamera: NHandle; id: PNChar): NResult stdcall; external dllName name 'CameraGetIdA';
{$ENDIF}
	function CameraIsCapturing(hCamera: NHandle; var pValue: NBoolean): NResult stdcall; external dllName;
	function CameraStartCapturing(hCamera: NHandle): NResult stdcall; external dllName;
	function CameraStopCapturing(hCamera: NHandle): NResult stdcall; external dllName;
	function CameraGetCurrentFrame(hCamera: NHandle; var hImage: NHandle): NResult stdcall; external dllName;
	function CameraGetVideoFormats(hCamera: NHandle; arVideoFormats: Pointer): NResult stdcall; external dllName;
	function CameraGetVideoFormat(hCamera: NHandle; var videoFormat: TCameraVideoFormat): NResult stdcall; external dllName;
	function CameraSetVideoFormat(hCamera: NHandle; var videoFormat: TCameraVideoFormat): NResult stdcall; external dllName;

{$IFDEF UNICODE}
	function FPScannerGetId(hScanner: NHandle; id: PNChar): NResult stdcall; external dllName name 'FPScannerGetIdW';
{$ELSE}
	function FPScannerGetId(hScanner: NHandle; id: PNChar): NResult stdcall; external dllName name 'FPScannerGetIdA';
{$ENDIF}
	function FPScannerIsCapturing(hScanner: NHandle; var pValue: NBoolean): NResult stdcall; external dllName;
	function FPScannerStopCapturing(hScanner: NHandle): NResult stdcall; external dllName;
	function FPScannerStartCapturingForOneImage(hScanner: NHandle): NResult stdcall; external dllName;
	function FPScannerStartCapturing(hScanner: NHandle): NResult stdcall; external dllName;
	function FPScannerSetFingerPlacedCallback(hScanner: NHandle; pCallback: TCallBackScannerStatus; pParam: Pointer): NResult stdcall; external dllName;
	function FPScannerSetFingerRemovedCallback(hScanner: NHandle; pCallback: TCallBackScannerStatus; pParam: Pointer): NResult stdcall; external dllName;
	function FPScannerSetImageScannedCallback(hScanner: NHandle; pCallback: TCallBackImageScanned; pParam: Pointer): NResult stdcall; external dllName;

	function FPScannerManInitialize: NResult stdcall; external dllName;
{$IFDEF UNICODE}
	function FPScannerManInitializeWithModules(scannerModules: AnsiString): NResult stdcall; external dllName name 'FPScannerManInitializeWithModulesA';
	function FPScannerManInitializeWithModulesEmpty(scannerModules: NInt): NResult stdcall; external dllName name 'FPScannerManInitializeWithModulesW';
	function FPScannerManGetAvailableModules(var scannerModules: PNChar): NResult stdcall; external dllName name 'FPScannerManGetAvailableModulesW';
{$ELSE}
	function FPScannerManInitializeWithModules(scannerModules: AnsiString): NResult stdcall; external dllName name 'FPScannerManInitializeWithModulesA';
	function FPScannerManInitializeWithModulesEmpty(scannerModules: NInt): NResult stdcall; external dllName name 'FPScannerManInitializeWithModulesA';
	function FPScannerManGetAvailableModules(var scannerModules: PNChar): NResult stdcall; external dllName name 'FPScannerManGetAvailableModulesA';
{$ENDIF}
	procedure FPScannerManUninitialize; stdcall; external dllName;
{$IFDEF UNICODE}
	function FPScannerManSetScannerAddedCallback(pCallback: TCallBackScannerMan; pParam: Pointer): NResult stdcall; external dllName name 'FPScannerManSetScannerAddedCallbackW';
	function FPScannerManSetScannerRemovedCallback(pCallback: TCallBackScannerMan; pParam: Pointer): NResult stdcall; external dllName name 'FPScannerManSetScannerRemovedCallbackW';
	function FPScannerManGetScannerById(id: PNChar; var pValue: Pointer) : NResult stdcall; external dllName name 'FPScannerManGetScannerByIdW';
{$ELSE}
	function FPScannerManSetScannerAddedCallback(pCallback: TCallBackScannerMan; pParam: Pointer): NResult stdcall; external dllName name 'FPScannerManSetScannerAddedCallbackA';
	function FPScannerManSetScannerRemovedCallback(pCallback: TCallBackScannerMan; pParam: Pointer): NResult stdcall; external dllName name 'FPScannerManSetScannerRemovedCallbackA';
	function FPScannerManGetScannerById(szId: Pchar; var pValue: Pointer): NResult stdcall; external dllName name 'FPScannerManGetScannerByIdA';
{$ENDIF}
	function FPScannerManGetScannerCount(var value: NInt): NResult stdcall; external dllName;
	function FPScannerManGetScanner(index: NInt; var hScanner: NHandle): NResult stdcall; external dllName;

procedure ScannerAdded(scannerId: PNChar; Param: Pointer); stdcall;
var
	scannerMan: TFPScannerMan;
	i: NInt;
begin
	scannerMan := TFPScannerMan(Param);
	if ((scannerMan <> nil) and (Length(scannerMan._scannerAddedCallbacks) <> 0)) then
	begin
		for i := 0 to Length(scannerMan._scannerAddedCallbacks) - 1 do
		begin
			scannerMan._scannerAddedCallbacks[i](string(scannerId));
		end;
	end;
end;

procedure ScannerRemoved(scannerId: PNChar; Param: Pointer); stdcall;
var
	scannerMan: TFPScannerMan;
	i: NInt;
begin
	scannerMan := TFPScannerMan(Param);
	if ((scannerMan <> nil) and (Length(scannerMan._scannerRemovedCallbacks) <> 0)) then
	begin
		for i := 0 to Length(scannerMan._scannerRemovedCallbacks) - 1 do
		begin
			scannerMan._scannerRemovedCallbacks[i](string(scannerId));
		end;
	end;
end;

procedure FingerPlaced(hScanner: NHandle; Param: Pointer); stdcall;
var
	scanner: TFPScanner;
	i: NInt;
begin
	scanner := TFPScanner(Param);
	if (scanner <> nil) then
	begin
		for i := 0 to Length(scanner._scannerFingerPlacedCallback) - 1 do
		begin
			scanner._scannerFingerPlacedCallback[i](scanner);
		end;
	end;
end;

procedure FingerRemoved(hScanner: NHandle; Param: Pointer); stdcall;
var
	scanner: TFPScanner;
	i: NInt;
begin
	scanner := TFPScanner(Param);
	if (scanner <> nil) then
	begin
		for i := 0 to Length(scanner._scannerFingerRemovedCallback) - 1 do
		begin
			scanner._scannerFingerRemovedCallback[i](scanner);
		end;
	end;
end;

procedure FingerScanned(hScanner: NHandle; hImage: NHandle; Param: Pointer);
	stdcall;
var
	imagePtr: TNImage;
	imageCloned: TNImage;
	scanner: TFPScanner;
	i: NInt;
begin
	scanner := TFPScanner(Param);
	if (scanner <> nil) then
	begin
		imagePtr := TNImage.Create(hImage);
		imageCloned := imagePtr.Clone;
		for i := 0 to Length(scanner._scannerImageCallback) - 1 do
		begin
			scanner._scannerImageCallback[i](scanner, imageCloned);
		end;
		FreeAndNil(imageCloned);
	end;
end;

procedure NDevicesGetInfo(var info: TNLibraryInfo);
begin
	NCheck(NDevicesGetInfoInternal(info));
end;

constructor TCameraMan.Create;
begin
	inherited Create;
	NCheck(CameraManInitialize);
end;

destructor TCameraMan.Destroy;
begin
	CameraManUninitialize;
end;

function TCameraMan.CameraCount: NInt;
var
	value: NInt;
begin
	NCheck(CameraManGetCameraCount(value));
	Result := value;
end;

function TCameraMan.GetCamera(index: NInt): TCamera;
var
	hCamera: NHandle;
begin
	NCheck(CameraManGetCamera(index, hCamera));
	Result := TCamera.Create(hCamera);
end;

function TCameraMan.GetCamera(id: String): TCamera;
var
	hCamera: NHandle;
begin
	NCheck(CameraManGetCameraById(PChar(id), hCamera));
	Result := TCamera.Create(hCamera);
end;

constructor TCamera.Create(hCamera: NHandle);
var
	tmp: PNChar;
	res: NResult;
begin
	inherited Create;
	_handle := hCamera;

	_cameraId := '';
	res := CameraGetId(Handle, nil);
	NCheck(res);
	GetMem(tmp, (res + 1) * SizeOf(NChar));
	NCheck(CameraGetId(Handle, tmp));
	_cameraId := String(tmp);
	FreeMem(tmp);
end;

function TCamera.IsCapturing: NBoolean;
var
	value: NBoolean;
begin
	NCheck(CameraIsCapturing(Handle, value));
	Result := value;
end;

procedure TCamera.StartCapturing;
begin
	NCheck(CameraStartCapturing(Handle));
end;

procedure TCamera.StopCapturing;
begin
	NCheck(CameraStopCapturing(Handle));
end;
